# free-ai-model-router

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  free-ai-model-router-requirements.md  pyproject.toml
.github/workflows/: daily-update.yml
config/: manual-overrides.yaml  model-aliases.yaml  providers.yaml  scoring.yaml  sources.yaml
data/: pipeline-state.json
data/normalized/: benchmarks.json  endpoints.json
output/: latest.json  litellm-config-sample.yaml
reports/: changes.md  discovered-candidates.md  models.md  sources-health.md
src/free_ai_model_router/: __init__.py  __main__.py  cli.py  config_loader.py  models.py
src/free_ai_model_router/collectors/: artificial_analysis.py  huggingface.py
src/free_ai_model_router/generation/: litellm_config.py  reports.py
src/free_ai_model_router/http_client/: client.py
src/free_ai_model_router/pipeline/: orchestrator.py
src/free_ai_model_router/providers/: base.py  cerebras.py  cloudflare.py  gemini.py  groq.py  mistral.py  opencode_zen.py  openrouter.py  zai.py
src/free_ai_model_router/scoring/: engine.py
src/free_ai_model_router/storage/: cache.py  state.py
tests/: test_generation.py  test_models.py  test_providers.py  test_reports.py  test_scoring.py
