[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-ai-model-router"
version = "0.1.0"
description = "Daily discovery, verification, ranking and routing of free AI coding models"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "sstpnk" },
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "platformdirs>=4.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.1",
    "pre-commit>=3.5",
]
litellm = [
    "litellm>=1.40",
]
all = [
    "free-ai-model-router[dev,litellm]",
]

[project.scripts]
free-ai-model-router = "free_ai_model_router.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/free_ai_model_router"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
