[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-ai-model-router"
version = "0.1.0"
description = "Daily ETL that discovers, benchmarks, and ranks free AI coding models — generates a verified LiteLLM routing config"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "sstpnk", email = "oss@sstpnk.dev" },
]
keywords = [
    "ai", "llm", "routing", "litellm", "free-models",
    "coding-agents", "benchmark", "etl", "openrouter",
    "groq", "gemini", "mistral",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sstpnk/free-ai-model-router"
Repository = "https://github.com/sstpnk/free-ai-model-router"
Documentation = "https://github.com/sstpnk/free-ai-model-router#readme"
"Changelog" = "https://github.com/sstpnk/free-ai-model-router/releases"
"Issues" = "https://github.com/sstpnk/free-ai-model-router/issues"

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "platformdirs>=4.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.1",
    "pre-commit>=3.5",
]
litellm = [
    "litellm>=1.40",
]
all = [
    "free-ai-model-router[dev,litellm]",
]

[project.scripts]
free-ai-model-router = "free_ai_model_router.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/free_ai_model_router"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
